src/k8s/apps/listmonk/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: listmonk-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
