src/k8s/apps/listmonk/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: listmonk
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
