src/k8s/apps/listmonk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: listmonk
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: listmonk
  ports:
    - name: http
      port: 9000
      targetPort: http
